# omnisight

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LOCAL_SETUP.md  QUICKSTART.md  README.md  check-services.bat  docker-compose.yml  pyproject.toml  requirements.txt
ai/: __init__.py  explain.py  llm.py
api/: devgraph.py
apps/api/: README.md  __init__.py  config.py  main.py
apps/web/: README.md  next.config.ts  package.json  tsconfig.json
apps/web/src/pages/: index.tsx
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
docs/: AI_PIPELINE.md  API.md  ARCHITECTURE.md  DATABASE.md  ROADMAP.md  devgraph-data.json  devgraph.html
frontend/: README.md
graph/: __init__.py  analyzer.py  builder.py  metrics.py
indexer/: __init__.py  ir.py  tree_sitter_core.py  typescript_parser.py
indexer/resolver/: import_resolver.py  scope_resolver.py  semantic_resolver.py  symbol_resolver.py
indexer/visitors/: typescript_visitor.py
infra/: README.md  helm-values.yaml
k8s/: api-deployment.yaml  namespace.yaml
parser/: __init__.py  python.py
scripts/: devgraph.py  init_db.py  logs.sh  run-local.ps1  run-local.py  setup-local-unix.sh  setup-local-windows.ps1  setup.py  setup_database.py  start.sh  stop.sh  test_typescript_parser.py
scripts/tmp_ts/: sample.ts
services/detection/: __init__.py
services/embeddings/: __init__.py
services/indexing/: __init__.py
services/ingestion/: __init__.py
services/llm/: __init__.py
services/search/: __init__.py
services/transcription/: __init__.py
tests/: README.md
