[tool.poetry]
name = "omnisight"
version = "0.1.0"
description = "AI-powered video understanding platform with semantic search"
authors = ["OmniSight Team <team@omnisight.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/omnisight/omnisight"

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework
fastapi = "^0.104.1"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
python-multipart = "^0.0.6"

# Authentication
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}

# Database
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

# Vector Database
qdrant-client = "^2.7.0"

# Cache & Queue
redis = "^5.0.1"
celery = "^5.3.4"
dramatiq = "^1.14.2"

# Storage
boto3 = "^1.29.7"
python-magic = "^0.4.27"

# AI/ML
torch = "^2.1.1"
torchvision = "^0.16.1"
ultralytics = "^8.0.193"  # YOLO
openai-whisper = "^20231106"
transformers = "^4.35.2"
pillow = "^10.0.1"
numpy = "^1.24.3"
opencv-python = "^4.8.1"

# HTTP Client
httpx = "^0.25.0"
aiohttp = "^3.9.0"

# Logging & Monitoring
python-json-logger = "^2.0.7"
prometheus-client = "^0.19.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
click = "^8.1.7"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
pylint = "^3.0.3"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
